<resources>
    <string name="app_name" translatable="false">Forat19</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login_user">Login</string>
    <string name="login_register">Register</string>
    <string name="login_openSession">Stay open session</string>
    <string name="login_title">Log in</string>

    <string name="register_intro_data">Enter data for registration</string>
    <string name="register_username">Username</string>
    <string name="register_name">Full name</string>
    <string name="register_password">Password</string>
    <string name="register_rePassword">Repeat the password</string>
    <string name="register_mail">Email</string>
    <string name="register_phone">Phone</string>
    <string name="register_address">Address</string>
    <string name="register_info">Do you want to receive information?</string>
    <string name="register_save">Save</string>

    <string name="error_name">Error. You must enter at least one first name and one surname and without accents</string>
    <string name="error_user">Error. The user must have between 8 and 20 characters</string>
    <string name="error_password">The password must be greater than 6 characters and contain uppercase, lowercase and special characters</string>
    <string name="error_rePassword">Error. The passwords do not match</string>
    <string name="error_mail">Error. Wrong email format.</string>
    <string name="error_phone">Error. The phone must have 6 digits</string>
    <string name="error_address">Error. The address cannot exceed 70 characters</string>
    <string name="register_title">Log in</string>
    <string name="forat19_project">Forat19 is a GolfUs project</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="attention">Attention</string>
    <string name="do_you_want_close_session">Are you sure you want to log out?</string>
    <string name="Cancel">Cancel</string>
    <string name="are_all_the_data_correct">Is all the data correct?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_game">Create game</string>
    <string name="start_game">Start game</string>
    <string name="search_green">Search green</string>
    <string name="admin_options">Admin options</string>
    <string name="user_management">User management</string>
    <string name="green_managementes">Green managements</string>
    <string name="other_options">Other options</string>
    <string name="about">About us</string>
    <string name="close_session">Close session</string>
    <string name="unknown_user">Error. Unknown user</string>
    <string name="Error_user_password">Invalid user or password</string>
    <string name="my_account">My account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_successfully_registered">User successfully registered</string>
    <string name="it_was_impossible_to_make_connection">It was impossible to make the connection</string>
    <string name="Update">Update</string>
    <string name="delete_account">Delete account</string>
    <string name="Full_name">Full name</string>
    <string name="Email">Email</string>
    <string name="Phone_number">Phone number</string>
    <string name="Address">Address</string>
    <string name="Account_deleted">Account deleted</string>
    <string name="Not_possible_to_delete_account">It has not been possible to delete the account</string>
    <string name="Data_properly_updated">Data properly updated</string>
    <string name="users_list">Users list</string>
    <string name="all_users">All users</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="search_user">Search user</string>
    <string name="registered_data">Registered data</string>
    <string name="change_user_password">Change user Password</string>
    <string name="active_user">Active user</string>
    <string name="admin_user">Admin user</string>
    <string name="choose_user_type">Choose user type</string>
    <string name="mail_manager_error">No Tienes ningun gestor de correo instalado</string>
    <string name="zip_code">ZIP Code</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="country">Country</string>
    <string name="website">Website</string>
    <string name="mobile">mobile</string>
    <string name="fax">Fax</string>
    <string name="how_to_get">How to get</string>
    <string name="about_installation">About Installation</string>
    <string name="services">Services</string>
    <string name="centre_the_qr_code_inside_the_viewer">centre the QR code inside the viewer</string>
    <string name="installations_management">Installations management</string>
    <string name="without_courses">No courses available</string>
    <string name="search_installation">Search installation</string>
    <string name="course_name">Course name</string>
    <string name="slope" translatable="false">Slope</string>
    <string name="field_value">Field value</string>
    <string name="type">Type</string>
    <string name="about_course">About course</string>
    <string name="handicap" translatable="false">Handicap</string>
    <string name="lenght">Lenght</string>
    <string name="par" translatable="false">Par</string>
    <string name="add_course">Add course</string>
    <string name="new_course">new Course</string>
    <string name="call_could_not_be_made">Call could not be made</string>
    <string name="Location_could_not_be_opened">Location could not be opened</string>
    <string name="cant_open_web">Web could not be opened</string>
    <string name="Hole">Hole</string>
    <string name="user_features">User features</string>
    <string name="number_of_holes">Number of holes</string>
    <string name="delete_the_account">Are you sure you want to delete the account?</string>
    <string name="course_added_ok">Recorrido añadido con éxito</string>
    <string name="course_added_error">Error al añadir recorrido</string>
    <string name="hole_editing">Hole editing</string>
    <string name="about_hole">About hole</string>
    <string name="course_editing">Course editing</string>
    <string name="missing_field_to_be_filled_in">Missing field to be filled in</string>
    <string name="create_player">Create player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="match_is_complete">The match is complete</string>
    <string name="host_player_cannot_be_removed">Host player cannot be removed</string>
    <string name="new_game">New Game</string>
    <string name="select_course_type">Select course type:</string>
    <string name="select_game_type">Select game type:</string>
    <string name="select_course">Select course</string>
    <string name="select_player">Select player</string>
    <string name="players">Players</string>
    <string name="not_enough_gamers">There are not enough players</string>
    <string name="player_already_in_the_match">This player is already in the match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_gamer">New gamer</string>
    <string name="choose_player_type">Choose player type</string>
    <string name="add_with_qr_code">Add with QR Code</string>
    <string name="Friendship_added">Friendship successfully added</string>
    <string name="Are_you_sure_eliminate_friendship">Are you sure you want to eliminate friendship?</string>
    <string name="friendship_request">Friendship request</string>
    <string name="no_pending_applications">No pending request</string>
    <string name="game_succesfully_eliminated">Game successfully eliminated</string>
    <string name="Game_could_not_be_deleted">The game could not be deleted</string>
    <string name="are_you_sure_eliminate_game">Are you sure you want to eliminate this game?</string>
    <string name="no_pending_games_to_show">No pending games to show</string>
    <string name="all">All</string>
    <string name="current_game">Current game</string>
    <string name="pending_games">Pending games</string>
    <string name="select_player_type">Select player type</string>
    <string name="friendship_successfully_eliminated">Friendship successfully eliminated</string>
    <string name="Friendship_could_not_be_added">Friendship could not be added</string>
    <string name="send_friendship_request_to">Send friendship request to</string>
    <string name="Friendship_successfully_updated">Friendship successfully updated</string>
    <string name="accept_friend_request">Do you want to accept the friend request?</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="update_game">Update game</string>
    <string name="change_data">Change data</string>
    <string name="change_hour">Change hour</string>
    <string name="course_type">Course type</string>
    <string name="game_succesfully_ended">Game succesfully ended</string>
    <string name="game_could_not_be_ended">Game could not be ended</string>
    <string name="selected_player">Selected player</string>
    <string name="the_game_needs_to_be_finished_first">The game needs to be finished first</string>
    <string name="select_hole">Select hole</string>
    <string name="are_you_sure_end_game">Are you sure that you want end game?</string>
    <string name="show_ended_games">Show ended games</string>
    <string name="loading_games">Loading Games...</string>
    <string name="ended_games">Ended games</string>
    <string name="no_ended_games_to_show">No ended games to show</string>
    <string name="friendship_list">Friendship list</string>
    <string name="no_friendships_to_show">No friendships to show</string>
    <string name="player_successfully_updated">Player successfully updated</string>
    <string name="The_game_has_started">The game has started</string>
    <string name="no_gamer_created">"You have not created any players yet "</string>
    <string name="loading_game">Loading game...</string>
    <string name="no_course_selected">No course selected</string>
    <string name="You_already_have_that_type_of_player">You already have that type of player</string>
    <string name="click_on_the_user_to_accept_the_friendship">Click on the user to accept the friendship</string>
    <string name="swipe_to_the_right_to_remove_the_friendship">Swipe to the right to remove the friendship</string>
    <string name="gamer_succesfully_added">Gamer succesfully added</string>

</resources>