<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item
            android:checkable="true"
            android:icon="@drawable/ic_create_game"
            android:title="@string/create_game" />
        <item
            android:checkable="true"
            android:icon="@drawable/ic_start_game"
            android:title="@string/start_game" />
        <item
            android:checkable="true"
            android:icon="@drawable/ic_search"
            android:title="@string/search_green" />

    </group>


    <group
        android:id="@+id/adminOption"
        android:checkableBehavior="single">
        <item android:title="@string/admin_options">
            <menu>
                <item
                    android:checkable="true"
                    android:icon="@drawable/ic_manage_users"
                    android:title="@string/user_management" />
                <item
                    android:checkable="true"
                    android:icon="@drawable/ic_manage_greens"
                    android:title="@string/green_managementes" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/other_options">
            <menu>
                <item
                    android:id="@+id/manageUSers"
                    android:checkable="true"
                    android:icon="@drawable/ic_manage_users"
                    android:title="@string/my_account" />
                <item
                    android:id="@+id/about"
                    android:checkable="true"
                    android:icon="@drawable/ic_info"
                    android:title="@string/about" />
                <item
                    android:id="@+id/closeSession"
                    android:checkable="true"
                    android:icon="@drawable/ic_close_session"
                    android:title="@string/close_session" />
            </menu>
        </item>
    </group>


</menu>