<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HoleFragment" >

    <LinearLayout
        android:id="@+id/dataHole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/par" />

        <TextView
            android:id="@+id/hole_par"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="3" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/handicap" />

        <TextView
            android:id="@+id/hole_handicap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="4" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lenght" />

        <TextView
            android:id="@+id/hole_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="23" />
    </LinearLayout>

    <TextView
        android:id="@+id/hole_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataHole"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:text="TextView"
        android:textAlignment="viewStart"
        tools:text="Informacion sobre el hoyo" />

</RelativeLayout>